prusti-tests/tests/verify_overflow/ui/core_proof/Counterexamples/enums-1.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/enums-1.rs:12:27
   |
12 | fn test1(x: Something) -> bool {
   |                           ^^^^
   |
note: the error originates here
  --> $DIR/enums-1.rs:12:1
   |
12 | / fn test1(x: Something) -> bool {
13 | |     !matches!(x, Something::Third)
14 | | }
   | |_^
note: counterexample for "x"
       value:   Something::Third
  --> $DIR/enums-1.rs:12:10
   |
12 | fn test1(x: Something) -> bool {
   |          ^

error: aborting due to previous error

